--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,7 +1,4 @@
 {
-    "Select a manufacturer":"Hersteller wählen",
-    "Select a model":"Model wählen",
-    "Modify printer":"Drucker bearbeiten",
     "%s ( %s %s ) was created with password '%s'": "%s ( %s %s ) wurde mit dem Passwort '%s' angelegt.",
     "%s was created successfully.": "%s wurde erfolgreich erstellt.",
     "%s was deleted successfully.": "%s wurde erfolgreich gelöscht.",
@@ -69,8 +66,11 @@
     "Content of the log": "Inhalt der Logdatei",
     "Count of accounts": "Anzahl der Benutzerkonten",
     "Create AdHoc-Room": "AdHoc-Raum für die Gruppe anlegen",
+    "Create a new announcement": "Neue Nachricht erstellen",
+    "Create a new contact": "Neuen Kontak erstellen",
     "Create a new customer.": "Einen neuen Kunden anlegen",
     "Create a new device.": "Ein neues Gerät anlegen",
+    "Create a new faq": "Neues FAQ erstellen",
     "Create a new group": "Eine neue Gruppe anlegen",
     "Create a new hardware configuration": "Eine neue Gerätekonfiguration anlegen",
     "Create a new installation set": "Ein neues Installationsset anlegen",
@@ -80,6 +80,7 @@
     "Create a new printer queue": "Eine Warteschlange zu einem existierenden Drucker anlegen.",
     "Create a new room": "Einen neuen Raum anlegen",
     "Create a new software package": "Softwarepaket erstellen",
+    "Create a new task": "Neue Aufgabe erstellen",
     "Create a new user": "Einen neuen Benutzer anlegen",
     "Create installation set": "Installationsset erstellen",
     "Custom list was written successfull": "Eigene Liste wurde erfolgreich geschrieben",
@@ -142,6 +143,14 @@
     "Filtered internet access": "Gefilterter Internetzugang",
     "Firewall incoming access rule  was set successfully.": "Einkommende Firewall-Regeln wurden erfolgreich gesetzt.",
     "Firewall outgoing access rule  was set successfully.": "Ausgehende Firewall-Regeln wurden erfolgreich gesetzt.",
+    "Get corresponding announcements": "Aktuelle Nachrichten",
+    "Get corresponding contacts": "Veröffentlichte Kontakte",
+    "Get corresponding faqs": "Veröffentlichte FAQs",
+    "Get corresponding tasks": "Veröffentlichte Aufgaben",
+    "Get owned announcements": "Eigene Nachrichten",
+    "Get owned contacts": "Eigene Kontakte",
+    "Get owned faqs": "Eigene FAQs",
+    "Get owned tasks": "Eigene Aufgaben",
     "Group": "Gruppe",
     "Group was created.": "Die Gruppe wurde erfolgreich angelegt.",
     "Group was deleted.": "Gruppe wurde erfolgreich gelöscht.",
@@ -156,6 +165,7 @@
     "Import was started.": "Benutzerimport wurde gestartet",
     "Import was stopped.": "Import wurde angehalten",
     "Incoming rules": "Eingehende Regeln",
+    "Informations": "Informationen",
     "Installation sets": "Installationssets",
     "Institutes": "Institutionen",
     "Lessons": "Unterricht",
@@ -167,6 +177,7 @@
     "List of owned announcements": "Eigene Veröffentlichungen",
     "List of owned contacts": "Eigene Kontakte",
     "List of owned faqs": "Eigene FAQs",
+    "List of owned tasks": "Eigene Aufgaben",
     "List of the results:": "Liste der Rückmeldungen",
     "Logged in users was cleaned up on '%s'.": "Angemeldete Benutzer am '%s' wurden gelöscht.",
     "Manage DHCP Parameter of:": "DHCP Parameter verwalten:",
@@ -196,6 +207,7 @@
     "Members of the selected hwconf:": "Geräte in der Gerätekonfiguration:",
     "Modify groups of selected user:": "Gruppenmitgliedschaft bearbeiten für:",
     "Modify members of selected group:": "Gruppenmitglieder bearbeiten:",
+    "Modify printer": "Drucker bearbeiten",
     "Modify printers for selected device": "Drucker für das Gerät einstellen",
     "Modify printers for selected object": "Drucker einstellen für:",
     "Modify printers selected room": "Drucker im Raum einstellen",
@@ -259,6 +271,8 @@
     "Select a Room": "Wählen Sie einen Raum",
     "Select a file": "Datei auswählen",
     "Select a key": "Schlüssel wählen",
+    "Select a manufacturer": "Hersteller wählen",
+    "Select a model": "Model wählen",
     "Select a room": "Raum wählen",
     "Select an action": "Aktion wählen",
     "Select an addon": "Zusatzmodul wählen",
