Implementing multicast cloning

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -18,8 +18,12 @@
     "Add hwconf": "Gerätekonfiguration anlegen",
     "Add institute": "Institution anlegen",
     "Add new DHCP Option/Statement": "Neue DHCP Option oder Anweisung erstellen",
+    "Add new announcement": "Neue Veröfffentlichung erstellen",
+    "Add new contact:": "Neuen Kontakt erstellen",
+    "Add new faq:": "Neues FAQ erstellen",
     "Add new license": "Neue Lizenz eintragen",
     "Add new room access status": "Neue Raumzugriffsregel anlegen",
+    "Add new task": "Neue Aufgabe erstellen",
     "Add notice": "Notiz hinzufügen",
     "Add outgoing firewall rule": "Ausgehende Firewall-Regel hinzufügen",
     "Add outgoing rule": "Ausgehende Regel erstellen",
@@ -159,6 +163,9 @@
     "HWConf": "Gerätekonfiguration",
     "HWConf was set on '%s'.": "Gerätekonfiguration wurde am '%s' geändert.",
     "HWConfs": "Gerätekonfigurationen",
+    "I": "Installiert",
+    "IM": "Manuell installiert",
+    "IS": "Installation geplant",
     "Import ist just running.": "Import läuft gerade",
     "Import users": "Benutzerimporte",
     "Import was deleted.": "Import wurde gelöscht",
@@ -166,6 +173,7 @@
     "Import was stopped.": "Import wurde angehalten",
     "Incoming rules": "Eingehende Regeln",
     "Informations": "Informationen",
+    "Installation Status": "Installationstatus",
     "Installation sets": "Installationssets",
     "Institutes": "Institutionen",
     "Lessons": "Unterricht",
@@ -215,6 +223,7 @@
     "Modify selected institute:": "Institut bearbeiten:",
     "Modify selected user:": "Benutzer bearbeiten:",
     "Modify selecter group:": "Gruppe bearbeiten",
+    "Multicast cloning of": "Multicast Klonen von",
     "My Devices": "Eigene Geräte",
     "MyGroups": "Meine Gruppen",
     "NODEVICE": "Kein Gerät",
@@ -276,6 +285,7 @@
     "Select a room": "Raum wählen",
     "Select an action": "Aktion wählen",
     "Select an addon": "Zusatzmodul wählen",
+    "Select network card": "Netzwerkkarte wählen",
     "Select objects": "Objekte auswählen",
     "Select picture size": "Bildgröße wählen",
     "Select the columns to show": "Sichtbare Felder auswählen.",
@@ -296,6 +306,8 @@
     "Shut down the server.": "Server herunterfahren",
     "Software installation status:": "Status der Softwareinstallationen:",
     "Start a new user import": "Neuen Benutzerimport starten",
+    "Start sending": "Das Senden von Image starten",
+    "Start the devices and wait until they start in the CloneTool.": "Schalten Sie die Geräte ein und warten Sie bis sie alle in CloneTool sind.",
     "Start the import as real import not test.": "Testimport als realen Import starten.",
     "Start time": "Gestartet",
     "Status of the Services": "Status der Serverdienste",
@@ -315,6 +327,7 @@
     "The '%s' was enabled.": "Der Benutzer '%s' wurde aktiviert.",
     "The MAC address '%s' will be used allready by '%s'.": "Die MAC-Adresse '%s' wird von Gerät '%s' benutzt.",
     "The black list was changed.": "Die eigene Black-Liste wurde geändert.",
+    "The boot files for the selected devices was written.": "Die Startdateien wurden für die gewählten Geräten geschrieben.",
     "The cephalix list was changed.": "Die eigene Cephalix-Liste wurde geändert.",
     "The changes will be lost if you leave the module.": "Ihre Änderungen gehen verloren, wenn Sie das Modul verlassen.",
     "The file system quota for '%s' was set.": "Dateisystemquota für '%s' wurde gesetzt.",
@@ -336,6 +349,7 @@
     "This user must not be deleted.": "Dieser Benutzer darf nicht gelöscht werden.",
     "To login": "Anmelden",
     "Toggle yes no": "umschalten",
+    "US": "Entfernen geplant",
     "Uid contains not allowed characters.": "Benutzername enthält nicht erlaubte Zeichen.",
     "Update the server.": "Server aktualisieren.",
     "Upload files": "Dateien verteilen",
@@ -348,6 +362,7 @@
     "User was modified successfully": "Der Benutzer wurde erfolgreich geändert.",
     "Users": "Benutzer",
     "Valid Until": "Gültig bis",
+    "When all devices are waiting for datas you have to start to send the corresponding image.": "Warten alle Geräte auf Daten, starten Sie das Senden des entsprechenden Images.",
     "Write configuration and create installation image": "Konfiguration schreiben und Installationsmedium erstellen",
     "Write proxy configuration and restart proxy.": "Proxykonfiguration schreiben und Proxy neu starten",
     "Write state files for the devices": "Statefiles für die Geräte erstellen",
