--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -19,8 +19,8 @@
     "Add institute": "Institution anlegen",
     "Add new DHCP Option/Statement": "Neue DHCP Option oder Anweisung erstellen",
     "Add new announcement": "Neue Veröfffentlichung erstellen",
-    "Add new contact:": "Neuen Kontakt erstellen",
-    "Add new faq:": "Neues FAQ erstellen",
+    "Add new contact": "Neuen Kontakt erstellen",
+    "Add new faq": "Neues FAQ erstellen",
     "Add new license": "Neue Lizenz eintragen",
     "Add new room access status": "Neue Raumzugriffsregel anlegen",
     "Add new task": "Neue Aufgabe erstellen",
@@ -485,6 +485,7 @@
     "ipProxy": "Proxy IP",
     "ipTrNet": "IP im Transportnetz",
     "ipVPN": "Verbindungs-IP (VPN)",
+    "issue":"Angelegenheit",
     "keywords": "Stichwörter",
     "lang": "Sprache",
     "lastSync": "letzte Synchronisierung",
@@ -521,6 +522,7 @@
     "open": "öffnen",
     "other": "Andere Institution",
     "password": "Passwort",
+    "phone":"Telefon",
     "place": "Platz",
     "places": "Plätze",
     "pointInTime": "Zeitpunkt",
