--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -135,8 +135,8 @@
     "Edit user preferences": "Benutzereinstellungen bearbeiten",
     "Enter a new domain name": "Neuen Domainnamen eintragen",
     "Error": "Fehlerbericht",
-    "Exisiting DHCP Options/Statements": "Vorhanden DHCP Optionen und Anweisungen",
-    "Exsisting licenses": "Vorhandene Lizenzen",
+    "Existing DHCP Options/Statements": "Vorhanden DHCP Optionen und Anweisungen",
+    "Existing licenses": "Vorhandene Lizenzen",
     "FeatureRequest": "Featureanfrage",
     "Feedback": "Rückmeldung (Lob)",
     "File %s could not be saved to user: %s: %s": "Die Datei '%s' konnte nicht für '%s' gespeichert werden: '%s'",
@@ -257,6 +257,7 @@
     "Refresh the import list": "Liste der Importe neu laden",
     "Remote access": "Fernwartung",
     "Remove archived images": "Archivierte Images löschen",
+    "Repeat new password": "Wiederhole das neue Passwort",
     "Request was sent. Please be patient!": "Die Anfrage wurde gesendet. Bitte warten!",
     "Reset password": "Passwort setzen",
     "Reset printer": "Drucker zurücksetzen",
