--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -104,7 +104,7 @@
     "Device control was applied on '%s'.": "Gerätekontrolle wurde am '%s' angewendet.",
     "Device control was applied on ''%s.": "Geräteaktion wurde an '%s' angewendet.",
     "Device was modified successfully.": "Gerät wurde erfolgreich geändert.",
-    "Devices": "Geräte",
+    "Devices": "Geräte anzeigen",
     "Devices were created successfully.": "Geräte wurden erfolgreich angelegt.",
     "Direct internet access": "Direkter Internetzugang",
     "Do you realy want to delete?": "Wollen Sie die folgenden Objekte wirklich löschen?",
@@ -299,9 +299,10 @@
     "Sequrity": "Sicherheit",
     "Server configuration": "Konfiguration",
     "Service state was set successfully.": "Dienststatus wurde erfolgreich gesetzt.",
+    "Set DHCP parameter": "DHCP Parameter setzen",
     "Set filesystemquota for the selected users": "Dateisystemquota für die gewählten Benutzer setzen.",
     "Set mailsystemquota for the selected users": "Mailsystemquota für die gewählten Benutzer setzen.",
-    "Set printers": "Drucker einstellen";
+    "Set printers": "Drucker einstellen",
     "Set the next default values": "Folgende Standardwerte eintragen",
     "Settings": "Einstellungen",
     "Show the import result.": "Das Ergebnis des Imports anzeigen.",
