--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -302,7 +302,7 @@
     "Set DHCP parameter": "DHCP Parameter setzen",
     "Set filesystemquota for the selected users": "Dateisystemquota für die gewählten Benutzer setzen.",
     "Set mailsystemquota for the selected users": "Mailsystemquota für die gewählten Benutzer setzen.",
-    "Set printers": "Drucker einstellen",
+    "Set printers": "Drucker zuordnen",
     "Set the next default values": "Folgende Standardwerte eintragen",
     "Settings": "Einstellungen",
     "Show the import result.": "Das Ergebnis des Imports anzeigen.",
