--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -455,6 +455,7 @@
     "globalSchool": "Gesamtschule",
     "group": "Gruppe",
     "groupId": "Gruppen",
+    "groupName": "Gruppenname",
     "groupType": "Art der Gruppe",
     "groups": "Gruppen",
     "guest users add": "Gastbenutzer anlegen",
