--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -50,7 +50,7 @@
     "Apply changes": "Änderungen anwenden",
     "Apply state on all running devices": "Status an allen laufenden Geräten anwenden.",
     "Available Printers": "Weitere Drucker",
-    "Available acls": "Weitere ACLs",
+    "Available ACLs": "Weitere ACLs",
     "Available groups:": "Weitere Gruppen:",
     "Available members:": "Weitere Benutzer:",
     "Backup": "Sicherung",
