Translation and spelling. (#53)
* Update software-licenses.component.html

* Update manage-dhcp.component.html

* Update create-support.html

* Update setpassword.component.html

* Update de.json

* Update create-support.html

* Update select-columns.component.html

* Update de.json

* Update de.json

* Update de.json

* Update select-columns.component.html

* Update software-licenses.component.html

* Update setpassword.component.html

* Update manage-dhcp.component.html

* Update create-support.html

* Update mygroups.page.ts

* Update de.json

* Update mygroups.page.html

* Update de.json

Adjust translation.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -50,7 +50,7 @@
     "Apply changes": "Änderungen anwenden",
     "Apply state on all running devices": "Status an allen laufenden Geräten anwenden.",
     "Available Printers": "Weitere Drucker",
-    "Available acls": "Weitere ACLs",
+    "Available ACLs": "Weitere ACLs",
     "Available groups:": "Weitere Gruppen:",
     "Available members:": "Weitere Benutzer:",
     "Backup": "Sicherung",
@@ -104,7 +104,7 @@
     "Device control was applied on '%s'.": "Gerätekontrolle wurde am '%s' angewendet.",
     "Device control was applied on ''%s.": "Geräteaktion wurde an '%s' angewendet.",
     "Device was modified successfully.": "Gerät wurde erfolgreich geändert.",
-    "Devices": "Geräte",
+    "Devices": "Geräte anzeigen",
     "Devices were created successfully.": "Geräte wurden erfolgreich angelegt.",
     "Direct internet access": "Direkter Internetzugang",
     "Do you realy want to delete?": "Wollen Sie die folgenden Objekte wirklich löschen?",
@@ -135,8 +135,8 @@
     "Edit user preferences": "Benutzereinstellungen bearbeiten",
     "Enter a new domain name": "Neuen Domainnamen eintragen",
     "Error": "Fehlerbericht",
-    "Exisiting DHCP Options/Statements": "Vorhanden DHCP Optionen und Anweisungen",
-    "Exsisting licenses": "Vorhandene Lizenzen",
+    "Existing DHCP Options/Statements": "Vorhanden DHCP Optionen und Anweisungen",
+    "Existing licenses": "Vorhandene Lizenzen",
     "FeatureRequest": "Featureanfrage",
     "Feedback": "Rückmeldung (Lob)",
     "File %s could not be saved to user: %s: %s": "Die Datei '%s' konnte nicht für '%s' gespeichert werden: '%s'",
@@ -257,6 +257,7 @@
     "Refresh the import list": "Liste der Importe neu laden",
     "Remote access": "Fernwartung",
     "Remove archived images": "Archivierte Images löschen",
+    "Repeat new password": "Wiederhole das neue Passwort",
     "Request was sent. Please be patient!": "Die Anfrage wurde gesendet. Bitte warten!",
     "Reset password": "Passwort setzen",
     "Reset printer": "Drucker zurücksetzen",
@@ -298,8 +299,10 @@
     "Sequrity": "Sicherheit",
     "Server configuration": "Konfiguration",
     "Service state was set successfully.": "Dienststatus wurde erfolgreich gesetzt.",
+    "Set DHCP parameter": "DHCP Parameter setzen",
     "Set filesystemquota for the selected users": "Dateisystemquota für die gewählten Benutzer setzen.",
     "Set mailsystemquota for the selected users": "Mailsystemquota für die gewählten Benutzer setzen.",
+    "Set printers": "Drucker zuordnen",
     "Set the next default values": "Folgende Standardwerte eintragen",
     "Settings": "Einstellungen",
     "Show the import result.": "Das Ergebnis des Imports anzeigen.",
@@ -452,6 +455,7 @@
     "globalSchool": "Gesamtschule",
     "group": "Gruppe",
     "groupId": "Gruppen",
+    "groupName": "Gruppenname",
     "groupType": "Art der Gruppe",
     "groups": "Gruppen",
     "guest users add": "Gastbenutzer anlegen",
