--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -304,6 +304,7 @@
     "Set mailsystemquota for the selected users": "Mailsystemquota für die gewählten Benutzer setzen.",
     "Set printers": "Drucker zuordnen",
     "Set the next default values": "Folgende Standardwerte eintragen",
+    "Set password for the selected users": "Passwort für ausgewählte Benutzer festlegen",
     "Settings": "Einstellungen",
     "Show the import result.": "Das Ergebnis des Imports anzeigen.",
     "Shut down the server.": "Server herunterfahren",
