--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -469,6 +469,7 @@
     "hwconfs": "Gerätekonfigurationen",
     "id": "Technisches ID",
     "identifier": "Identifizierungsmerkmal",
+    "ignoreNetbios":"Netbiosnamenskonvenzionen ignorieren",
     "import": "Importieren",
     "importFile": "Importdatei wählen",
     "installedKernel": "Installierter Kernel",
