--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -450,7 +450,7 @@
     "firstname": "Vorname",
     "friday": "Freitag",
     "fsQuota": "Dateisystemquota",
-    "fsQuotaUsed": "Belegter Quota",
+    "fsQuotaUsed": "Belegte Quota",
     "full": "Importdatei enthält alle Benutzer.",
     "givenName": "Vorname",
     "globalSchool": "Gesamtschule",
