--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -288,6 +288,7 @@
     "Select an addon": "Zusatzmodul wählen",
     "Select network card": "Netzwerkkarte wählen",
     "Select objects": "Objekte auswählen",
+    "Select OS": "Betriebssystem auswählen",
     "Select picture size": "Bildgröße wählen",
     "Select the columns to show": "Sichtbare Felder auswählen.",
     "Select the groups into  the user must be added.": "Gruppen markieren, in denen der Benutzer Mitglied werden soll.",
