--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -401,7 +401,7 @@
     "availableUpdates": "Update-Stand",
     "ayTemplate": "Installationsvorlage",
     "birthDay": "Geburtstag",
-    "cancel": "verVerwerfenwerfen",
+    "cancel": "verwerfen",
     "category": "Kategorie",
     "cephalixCustomerId": "Kunde",
     "cephalixInstituteId": "Institutionen",
