--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -104,7 +104,7 @@
     "Device control was applied on '%s'.": "Gerätekontrolle wurde am '%s' angewendet.",
     "Device control was applied on ''%s.": "Geräteaktion wurde an '%s' angewendet.",
     "Device was modified successfully.": "Gerät wurde erfolgreich geändert.",
-    "Devices": "Geräte anzeigen",
+    "Devices": "Geräte",
     "Devices were created successfully.": "Geräte wurden erfolgreich angelegt.",
     "Direct internet access": "Direkter Internetzugang",
     "Do you realy want to delete?": "Wollen Sie die folgenden Objekte wirklich löschen?",
@@ -309,6 +309,7 @@
     "Settings": "Einstellungen",
     "Show the import result.": "Das Ergebnis des Imports anzeigen.",
     "Shut down the server.": "Server herunterfahren",
+    "Softwares": "Software",
     "Software installation status:": "Status der Softwareinstallationen:",
     "Start a new user import": "Neuen Benutzerimport starten",
     "Start sending": "Das Senden von Image starten",
@@ -430,7 +431,7 @@
     "devCount": "Anzahl der Geräte",
     "device": "Gerät",
     "deviceName": "Gerätename",
-    "deviceType": "Gerättyp",
+    "deviceType": "Gerätetyp",
     "devices": "Geräte",
     "devicesProUser": "Gerät pro Benutzer",
     "direct": "Direktes Internet",
