--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -472,6 +472,7 @@
     "ignoreNetbios": "Netbiosnamenskonvenzionen ignorieren",
     "import": "Importieren",
     "importFile": "Importdatei wählen",
+    "inRoom": "Nur aus dem Raum",
     "installedKernel": "Installierter Kernel",
     "institute": "Institution",
     "institute was modified": "Institution wurde geändert",
@@ -518,6 +519,7 @@
     "name2": "Namenzusatz",
     "network": "Netzwerk",
     "nmTrNet": "Netzwerkmaske im Transportnetz",
+    "no": "keine",
     "noGrouping": "Keine Gruppierung",
     "noticeType": "Art",
     "notices": "Notizen",
@@ -600,6 +602,7 @@
     "sunday": "Sonntag",
     "supporttype": "Art der Supportanfrage",
     "surName": "Nachname",
+    "sysadminsOnly": "Nur durch Systemadministratoren",
     "sysadmins": "Systemadministratoren",
     "teachers": "Lehrer",
     "telephone": "Telefonnummer",
