--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -623,7 +623,7 @@
     "validFrom": "Gültig ab",
     "validUntil": "Gültig bis",
     "validity": "Gültigkeit",
-    "value": "Lizenzschlüssel",
+    "value": "Wert",
     "varUsage": "/var Belegung",
     "version": "Version",
     "warningMessageDuration": "Dauer der Warnmeldungen in Sekunden",
