Fix typo. Sort tickets. Show the newest on the top.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -187,6 +187,7 @@
     "List of owned faqs": "Eigene FAQs",
     "List of owned tasks": "Eigene Aufgaben",
     "List of the results:": "Liste der Rückmeldungen",
+    "Loading data ...": "Daten werden geladen ...",
     "Logged in users was cleaned up on '%s'.": "Angemeldete Benutzer am '%s' wurden gelöscht.",
     "Manage DHCP Parameter of:": "DHCP Parameter verwalten:",
     "Manage DNS Filter Configuration": "DNS-Filter Konfiguration",
