Add missed translations.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -18,7 +18,7 @@
     "Add hwconf": "Gerätekonfiguration anlegen",
     "Add institute": "Institution anlegen",
     "Add new DHCP Option/Statement": "Neue DHCP Option oder Anweisung erstellen",
-    "Add new announcement": "Neue Veröfffentlichung erstellen",
+    "Add new announcement": "Neue Nachricht erstellen",
     "Add new contact": "Neuen Kontakt erstellen",
     "Add new faq": "Neues FAQ erstellen",
     "Add new license": "Neue Lizenz eintragen",
@@ -43,7 +43,6 @@
     "All institutes": "Alle Institutionen",
     "All rooms": "Alle Räume",
     "All users": "Alle Benutzer",
-    "Announcements": "Nachrichten",
     "Apply Default": "Standardstatus",
     "Apply actions on the selected objects": "Aktionen an den ausgewählten Objekten ausführen.",
     "Apply an action on all devices in room": "Eine Aktion an allen Geräten im Raum anwenden.",
@@ -178,11 +177,11 @@
     "Institutes": "Institutionen",
     "Lessons": "Unterricht",
     "List of Imports": "Liste der Importe",
-    "List of corresponding announcements": "Aktuelle Veröffentlichungen",
+    "List of corresponding announcements": "Aktuelle Nachrichten",
     "List of corresponding contacts": "Kontakte",
     "List of corresponding faqs": "FAQs",
     "List of old Imports": "Alte Importe",
-    "List of owned announcements": "Eigene Veröffentlichungen",
+    "List of owned announcements": "Eigene Nachrichten",
     "List of owned contacts": "Eigene Kontakte",
     "List of owned faqs": "Eigene FAQs",
     "List of owned tasks": "Eigene Aufgaben",
@@ -226,6 +225,9 @@
     "Modify selecter group:": "Gruppe bearbeiten",
     "Multicast cloning of": "Multicast Klonen von",
     "My Devices": "Eigene Geräte",
+    "My groups": "Eigene Gruppen",
+    "My guests": "Eigene Gastgruppen",
+    "My students": "Meine Schüler",
     "MyGroups": "Meine Gruppen",
     "NODEVICE": "Kein Gerät",
     "New password": "Neues Passwort",
@@ -269,6 +271,8 @@
     "Room Control": "Raumkontrolle",
     "Room access": "Raumzugriff",
     "Room access rules": "Raumzugriffsregeln",
+    "Room control": "Raumkontrolle",
+    "Room control in": "Raumkontrolle in",
     "Room description is not unique.": "Raumbeschreibung wird schon verwendet.",
     "Room was created successfully.": "Der Raum wurde erfolgreich angelegt.",
     "Room was removed successfully.": "Der Raum wurde erfolgreich gelöscht.",
@@ -278,6 +282,7 @@
     "Salt High State was applied on all running minions.": "Die Salt-Konfiguration wird an allen aktiven Clients angewendet.",
     "Security": "Sicherheit",
     "Select DHCP Option/Statement": "DHCP Option oder Anweisung wählen",
+    "Select OS": "Betriebssystem auswählen",
     "Select a Device": "Wählen Sie ein Gerät",
     "Select a Room": "Wählen Sie einen Raum",
     "Select a file": "Datei auswählen",
@@ -289,7 +294,6 @@
     "Select an addon": "Zusatzmodul wählen",
     "Select network card": "Netzwerkkarte wählen",
     "Select objects": "Objekte auswählen",
-    "Select OS": "Betriebssystem auswählen",
     "Select picture size": "Bildgröße wählen",
     "Select the columns to show": "Sichtbare Felder auswählen.",
     "Select the groups into  the user must be added.": "Gruppen markieren, in denen der Benutzer Mitglied werden soll.",
@@ -304,14 +308,14 @@
     "Set DHCP parameter": "DHCP Parameter setzen",
     "Set filesystemquota for the selected users": "Dateisystemquota für die gewählten Benutzer setzen.",
     "Set mailsystemquota for the selected users": "Mailsystemquota für die gewählten Benutzer setzen.",
+    "Set password for the selected users": "Passwort für ausgewählte Benutzer festlegen",
     "Set printers": "Drucker zuordnen",
     "Set the next default values": "Folgende Standardwerte eintragen",
-    "Set password for the selected users": "Passwort für ausgewählte Benutzer festlegen",
     "Settings": "Einstellungen",
     "Show the import result.": "Das Ergebnis des Imports anzeigen.",
     "Shut down the server.": "Server herunterfahren",
-    "Softwares": "Software",
     "Software installation status:": "Status der Softwareinstallationen:",
+    "Softwares": "Software",
     "Start a new user import": "Neuen Benutzerimport starten",
     "Start sending": "Das Senden von Image starten",
     "Start the devices and wait until they start in the CloneTool.": "Schalten Sie die Geräte ein und warten Sie bis sie alle in CloneTool sind.",
@@ -321,6 +325,7 @@
     "Status of the institutes": "Status der Server",
     "Stop firewall": "Firewall anhalten",
     "Stop the running user import": "Laufenden Import anhalten",
+    "Students": "Schüler",
     "Support request '%s' was created with ticket number '%s'. Answer will be sent to '%s'.": "Die Supportanfrage '%s' wurde mit der Nummer '%s' erstellt. Antwort wird an '%s' gesendet.",
     "Support request '%s' was not created. The reason is:'%s'": "Die Supportanfrage '%s' konnte nicht erstellt werden. Der Grund: '%s'",
     "Surfing is for '%s' disabled.": "Das Surfen ist für '%s' verboten.",
@@ -329,7 +334,6 @@
     "System addons": "Zusatzmodule",
     "System configuration": "Systemeinstellungen",
     "System status": "Systemstatus",
-    "Tasks": "Aufgaben",
     "The '%s' was disabled.": "Der Benutzer '%s' wurde deaktiviert.",
     "The '%s' was enabled.": "Der Benutzer '%s' wurde aktiviert.",
     "The MAC address '%s' will be used allready by '%s'.": "Die MAC-Adresse '%s' wird von Gerät '%s' benutzt.",
@@ -393,7 +397,7 @@
     "agGridThema": "Tabellenstil",
     "allClasses": "Importdatei enthält alle Klassen. Andere werden gelöscht.",
     "allTeachers": "durch alle Lehrer",
-    "announcements": "Veröffentlichungen",
+    "announcements": "Nachrichten",
     "anonDhcpNetwork": "ANON_DHCP Netzwerk",
     "appendBirthdayToPassword": "Geburtsdatum an das Passwort anhängen.",
     "appendClassToPassword": "Klassennamen an das Passwort anhängen.",
@@ -606,8 +610,9 @@
     "sunday": "Sonntag",
     "supporttype": "Art der Supportanfrage",
     "surName": "Nachname",
-    "sysadminsOnly": "Nur durch Systemadministratoren",
     "sysadmins": "Systemadministratoren",
+    "sysadminsOnly": "Nur durch Systemadministratoren",
+    "tasks": "Aufgaben",
     "teachers": "Lehrer",
     "telephone": "Telefonnummer",
     "test": "Als Test ausführen",
