Enhance translation. Style select html widget.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -537,6 +537,7 @@
     "okMessageDuration": "Dauer der Erfolgsmeldungen in Sekunden",
     "open": "öffnen",
     "other": "Andere Institution",
+    "ownerId": "Besitzer",
     "password": "Passwort",
     "phone": "Telefon",
     "place": "Platz",
