--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -425,6 +425,7 @@
     "contacts": "Kontakte",
     "copyTemplate": "Template-Profil anwenden",
     "count": "Anzahl",
+    "counter": "Zähler",
     "country": "Land",
     "created": "erstellt",
     "csv-export": "CSV Export",
@@ -507,7 +508,8 @@
     "lastUpdate": "Letztes Update",
     "lastname": "Nachname",
     "licenseType": "Lizenztyp",
-    "locality": "Ort/Adresse",
+    "locality": "Ort",
+    "loggedInName": "Angemeldeter Benutzer",
     "login": "Anmelden",
     "logout": "Abmelden",
     "mac": "MAC-Adresse",
@@ -538,6 +540,7 @@
     "open": "öffnen",
     "other": "Andere Institution",
     "ownerId": "Besitzer",
+    "ownerName": "Besitzer",
     "password": "Passwort",
     "phone": "Telefon",
     "place": "Platz",
