--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,6 +1,4 @@
 {
-    "createAdHocRoom":"Extra Raum mit WLAN-Zugriff",
-    "privateGroup":"Privat",
     "%s ( %s %s ) was created with password '%s'": "%s ( %s %s ) wurde mit dem Passwort '%s' angelegt.",
     "%s was created successfully.": "%s wurde erfolgreich erstellt.",
     "%s was deleted successfully.": "%s wurde erfolgreich gelöscht.",
@@ -430,6 +428,7 @@
     "count": "Anzahl",
     "counter": "Zähler",
     "country": "Land",
+    "createAdHocRoom": "Extra Raum mit WLAN-Zugriff",
     "created": "erstellt",
     "csv-export": "CSV Export",
     "customerId": "",
@@ -497,7 +496,8 @@
     "invoiced": "Abgerechnet",
     "ip": "IP-Adresse",
     "ipAdmin": "Haupt-IP-Adresse",
-    "ipBackup": "IP des Backups ",
+    "ipBackup": "IP des Backupservers",
+    "ipFileserver": "Fileserver IP",
     "ipGateway": "Standardroute im Intranet",
     "ipMail": "Mailserver IP",
     "ipPrint": "Printserver IP",
@@ -555,6 +555,7 @@
     "primarySchool": "Grundschule",
     "printing": "Drucken",
     "private": "privat",
+    "privateGroup": "Privat",
     "projectName": "Projektname",
     "prop": "",
     "proxy": "Proxy",
