Code clean up. Remove editing sign. Now only click on text is enough.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,4 +1,5 @@
 {
+    "Challenge was successfully modified.":"Test wurde erfolgreich gespeichert",
     "One":"Eine richtige Antwort",
     "Multi":"Mehrere richtigen Antworten",
     "available": "verfügbar",
