--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,14 +1,5 @@
 {
-    "Challenge was successfully modified.":"Test wurde erfolgreich gespeichert",
-    "One":"Eine richtige Antwort",
-    "Multi":"Mehrere richtigen Antworten",
-    "available": "verfügbar",
-    "from": "ab",
-    "until": "bis",
-    "Is now available": "Aktuell veröffentlicht",
-    "Add new answer": "Eine neue Antwort einfügen",
-    "Add new question": "Eine neue Frage einfügen",
-    "Add one Attachment":"Einen Anhang einfügen",
+    "The challenge is now available. You must not change it.":"Dieser Test ist jetzt veröffentlich und darf nicht geändert werden.",
     "%s ( %s %s ) was created with password '%s'": "%s ( %s %s ) wurde mit dem Passwort '%s' angelegt.",
     "%s was created successfully.": "%s wurde erfolgreich erstellt.",
     "%s was deleted successfully.": "%s wurde erfolgreich gelöscht.",
@@ -29,12 +20,15 @@
     "Add institute": "Institution anlegen",
     "Add new DHCP Option/Statement": "Neue DHCP Option oder Anweisung erstellen",
     "Add new announcement": "Neue Nachricht erstellen",
+    "Add new answer": "Eine neue Antwort einfügen",
     "Add new contact": "Neuen Kontakt erstellen",
     "Add new faq": "Neues FAQ erstellen",
     "Add new license": "Neue Lizenz eintragen",
+    "Add new question": "Eine neue Frage einfügen",
     "Add new room access status": "Neue Raumzugriffsregel anlegen",
     "Add new task": "Neue Aufgabe erstellen",
     "Add notice": "Notiz hinzufügen",
+    "Add one Attachment": "Einen Anhang einfügen",
     "Add outgoing firewall rule": "Ausgehende Firewall-Regel hinzufügen",
     "Add outgoing rule": "Ausgehende Regel erstellen",
     "Add printer": "Drucker anlegen",
@@ -69,6 +63,7 @@
     "Boot configuration for %s was removed successfully.": "Die Bootkonfiguration für %s wurde erfolgreich entfernt.",
     "Boot configuration was saved successfully for %s.": "Die Bootkonfiguration für %s wurde erfolgreich erstellt.",
     "Cancel": "Verwerfen",
+    "Challenge was successfully modified.": "Test wurde erfolgreich gespeichert",
     "Change grouping of the table": "Gruppierung der Tabelle ändern",
     "Collect files": "Dateien einsammeln",
     "Collect the file from the Export directory of the logged on users or of the workstation users.": "Dateien aus den Exportverzeichnissen der angemeldeten Benutzer oder der Workstationsbenutzer einsammeln.",
@@ -186,6 +181,7 @@
     "Installation Status": "Installationstatus",
     "Installation sets": "Installationssets",
     "Institutes": "Institutionen",
+    "Is now available": "Aktuell veröffentlicht",
     "Lessons": "Unterricht",
     "List of Imports": "Liste der Importe",
     "List of corresponding announcements": "Aktuelle Nachrichten",
@@ -236,6 +232,7 @@
     "Modify selected user:": "Benutzer bearbeiten:",
     "Modify selecter group:": "Gruppe bearbeiten",
     "Multicast cloning of": "Multicast Klonen von",
+    "More right answers": "Mehrere richtigen Antworten",
     "My Devices": "Eigene Geräte",
     "My groups": "Eigene Gruppen",
     "My guests": "Eigene Gastgruppen",
@@ -245,6 +242,7 @@
     "New password": "Neues Passwort",
     "New quota in MB": "Neuer Quota in MB",
     "No default printer": "Kein Standarddrucker",
+    "One right answer": "Eine richtige Antwort",
     "Outgoing rules": "Ausgehende Regeln",
     "Overview": "Übersicht",
     "Own Black List": "Eigene Black-Liste",
@@ -415,6 +413,7 @@
     "appendClassToPassword": "Klassennamen an das Passwort anhängen.",
     "apply": "anwenden",
     "applyForAll": "Für alle",
+    "available": "verfügbar",
     "available members": "Nicht-Mitglieder der Gruppe",
     "availableUpdates": "Update-Stand",
     "ayTemplate": "Installationsvorlage",
@@ -470,6 +469,7 @@
     "firstRoom": "Erster Raum",
     "firstname": "Vorname",
     "friday": "Freitag",
+    "from": "ab",
     "fsQuota": "Dateisystemquota",
     "fsQuotaUsed": "Belegte Quota",
     "full": "Importdatei enthält alle Benutzer.",
@@ -644,6 +644,7 @@
     "tuesday": "Dienstag",
     "type": "Art",
     "uid": "Benutzername (Login)",
+    "until": "bis",
     "upload": "Dateien verteilen",
     "user": "Benutzer",
     "userId": "Benutzer",
